# asktable-better

./: .gitignore  README.md  README_EN.md  docker-compose-template.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __init__.py  main.py  models.py  schemas.py  services.py
app/routes/: home.py
app/runner/: init_at.py  init_db.py  main.py  run_story.py  test.py
app/runner/result/: base.py  feishu.py  markdown.py
app/static/css/: custom.css
app/static/js/: logs.js  main.js  modals.js  reports.js  results.js  stories.js
app/templates/: index.html
app/utils/: app_config.py  db_manager.py  logger.py  task_logger.py
docker/: Dockerfile
docs/: STORY_README.md
example-stories/fund_sales/: main.yaml
example-stories/fund_sales/init_sqls/: 0-sales.sql  1-product.sql  2-orders.sql
example-stories/gdp/: 2019GDP数据.xlsx  main.yaml
